--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,11 +10,11 @@ book:
   chapters:
     - index.qmd
     - intro.qmd
-    - summary.qmd
-    - references.qmd
     - Week01.qmd
     - Week02.qmd
     - Week03.qmd
+    - Week04.qmd
+    - Week06.qmd
 
 
 
