--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,12 +9,12 @@ book:
   date: "1/18/2024"
   chapters:
     - index.qmd
-    - intro.qmd
     - Week01.qmd
     - Week02.qmd
     - Week03.qmd
     - Week04.qmd
     - Week06.qmd
+    - Week07.qmd
 
 
 
