--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,7 +4,7 @@ project:
   
 
 book:
-  title: "0023_learning_diary"
+  title: "CASA0023 Learning Diary"
   author: "Qiyue Chen"
   date: "1/18/2024"
   chapters:
